# AndroidDemos

./: readMe.txt
DemoActivityLifecycle/: settings.gradle
DemoAudio/: text.txt
DemoAudioPlayer/: readMe.txt
DemoBaseNDK/app/: CMakeLists.txt  build.gradle
DemoBaseNDK/app/src/androidTest/java/com/test/demobasendk/: ExampleInstrumentedTest.java
DemoBaseNDK/app/src/main/: AndroidManifest.xml
DemoBaseNDK/app/src/main/cpp/: global.h  main.cpp  test.h
DemoBaseNDK/app/src/main/cpp/utils/: logUtil.cpp  logUtil.h
DemoBaseNDK/app/src/main/java/com/test/demobasendk/: AppMainActivity.java  LogUtil.java
DemoBaseNDK/app/src/main/java/com/test/demobasendk/jni/: JniUtil.java
DemoBaseNDK/app/src/main/java/com/test/demobasendk/ui/: AppMainActivity.java  ListAdapter.java
DemoBaseNDK/app/src/main/res/layout/: activity_main.xml  layout_list_item.xml
DemoBaseNDK/app/src/main/res/values/: strings.xml
DemoBaseNDK/app/src/test/java/com/test/demobasendk/: ExampleUnitTest.java
DemoBezierPath/: settings.gradle
DemoNDK_CMake/app/: CMakeLists.txt  build.gradle
DemoNDK_CMake/app/src/androidTest/java/com/test/demondk_cmake/: ExampleInstrumentedTest.java
DemoNDK_CMake/app/src/main/: AndroidManifest.xml
DemoNDK_CMake/app/src/main/cpp/: native-lib.cpp  test.cpp  test.h
DemoNDK_CMake/app/src/main/java/com/test/demondk_cmake/: AppMainActivity.java  JniUtil.java
DemoNDK_CMake/app/src/main/res/layout/: activity_main.xml
DemoNDK_CMake/app/src/main/res/values/: strings.xml
DemoNDK_CMake/app/src/test/java/com/test/demondk_cmake/: ExampleUnitTest.java
(+388 files in other folders)
